// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Atoms/Indicator passes the snapshot test for different animation durations 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    collapsable={false}
    style={{}}
  />
  <View
    collapsable={false}
    style={{}}
  />
  <View
    collapsable={false}
    style={{}}
  />
</View>
`;

exports[`Atoms/Indicator passes the snapshot test for different counts 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    collapsable={false}
    style={{}}
  />
  <View
    collapsable={false}
    style={{}}
  />
  <View
    collapsable={false}
    style={{}}
  />
</View>
`;

exports[`Atoms/Spinner passes the snapshot test for different color schemes 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
        [
          {
            "alignSelf": "flex-start",
          },
          {
            "color": "#6A7BFF",
            "flex": 0,
          },
        ],
      ]
    }
  >
    <View
      accessibilityLabel="Loading indicator"
      accessibilityRole="progressbar"
      accessible={true}
      animate={
        {
          "color": "#6A7BFF",
        }
      }
      collapsable={false}
      rawSize={20}
      style={
        {
          "height": 20,
          "width": 20,
        }
      }
      variant="spinner"
    >
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "height": 20,
              "transform": [
                {
                  "rotate": "82.5deg",
                },
                {
                  "rotate": "0deg",
                },
              ],
              "width": 20,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "height": 10,
                "overflow": "hidden",
                "width": 20,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "height": 20,
                  "transform": [
                    {
                      "translateY": 0,
                    },
                    {
                      "rotate": "-172.5deg",
                    },
                  ],
                  "width": 20,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "height": 10,
                    "overflow": "hidden",
                    "width": 20,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "borderColor": "#6A7BFF",
                      "borderRadius": 10,
                      "borderWidth": 2,
                      "height": 20,
                      "width": 20,
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "height": 20,
              "transform": [
                {
                  "rotate": "82.5deg",
                },
                {
                  "rotate": "0deg",
                },
              ],
              "width": 20,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "height": 10,
                "overflow": "hidden",
                "top": 10,
                "width": 20,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "height": 20,
                  "transform": [
                    {
                      "translateY": -10,
                    },
                    {
                      "rotate": "352.5deg",
                    },
                  ],
                  "width": 20,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "height": 10,
                    "overflow": "hidden",
                    "width": 20,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "borderColor": "#6A7BFF",
                      "borderRadius": 10,
                      "borderWidth": 2,
                      "height": 20,
                      "width": 20,
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
        [
          {
            "alignSelf": "flex-start",
          },
          {
            "color": "#38A169",
            "flex": 0,
          },
        ],
      ]
    }
  >
    <View
      accessibilityLabel="Loading indicator"
      accessibilityRole="progressbar"
      accessible={true}
      animate={
        {
          "color": "#38A169",
        }
      }
      collapsable={false}
      rawSize={20}
      style={
        {
          "height": 20,
          "width": 20,
        }
      }
      variant="spinner"
    >
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "height": 20,
              "transform": [
                {
                  "rotate": "82.5deg",
                },
                {
                  "rotate": "0deg",
                },
              ],
              "width": 20,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "height": 10,
                "overflow": "hidden",
                "width": 20,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "height": 20,
                  "transform": [
                    {
                      "translateY": 0,
                    },
                    {
                      "rotate": "-172.5deg",
                    },
                  ],
                  "width": 20,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "height": 10,
                    "overflow": "hidden",
                    "width": 20,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "borderColor": "#38A169",
                      "borderRadius": 10,
                      "borderWidth": 2,
                      "height": 20,
                      "width": 20,
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "height": 20,
              "transform": [
                {
                  "rotate": "82.5deg",
                },
                {
                  "rotate": "0deg",
                },
              ],
              "width": 20,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "height": 10,
                "overflow": "hidden",
                "top": 10,
                "width": 20,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "height": 20,
                  "transform": [
                    {
                      "translateY": -10,
                    },
                    {
                      "rotate": "352.5deg",
                    },
                  ],
                  "width": 20,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "height": 10,
                    "overflow": "hidden",
                    "width": 20,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "borderColor": "#38A169",
                      "borderRadius": 10,
                      "borderWidth": 2,
                      "height": 20,
                      "width": 20,
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
        [
          {
            "alignSelf": "flex-start",
          },
          {
            "color": "#FFB407",
            "flex": 0,
          },
        ],
      ]
    }
  >
    <View
      accessibilityLabel="Loading indicator"
      accessibilityRole="progressbar"
      accessible={true}
      animate={
        {
          "color": "#FFB407",
        }
      }
      collapsable={false}
      rawSize={20}
      style={
        {
          "height": 20,
          "width": 20,
        }
      }
      variant="spinner"
    >
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "height": 20,
              "transform": [
                {
                  "rotate": "82.5deg",
                },
                {
                  "rotate": "0deg",
                },
              ],
              "width": 20,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "height": 10,
                "overflow": "hidden",
                "width": 20,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "height": 20,
                  "transform": [
                    {
                      "translateY": 0,
                    },
                    {
                      "rotate": "-172.5deg",
                    },
                  ],
                  "width": 20,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "height": 10,
                    "overflow": "hidden",
                    "width": 20,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "borderColor": "#FFB407",
                      "borderRadius": 10,
                      "borderWidth": 2,
                      "height": 20,
                      "width": 20,
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "height": 20,
              "transform": [
                {
                  "rotate": "82.5deg",
                },
                {
                  "rotate": "0deg",
                },
              ],
              "width": 20,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "height": 10,
                "overflow": "hidden",
                "top": 10,
                "width": 20,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "height": 20,
                  "transform": [
                    {
                      "translateY": -10,
                    },
                    {
                      "rotate": "352.5deg",
                    },
                  ],
                  "width": 20,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "height": 10,
                    "overflow": "hidden",
                    "width": 20,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "borderColor": "#FFB407",
                      "borderRadius": 10,
                      "borderWidth": 2,
                      "height": 20,
                      "width": 20,
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
        [
          {
            "alignSelf": "flex-start",
          },
          {
            "color": "#3FB5FF",
            "flex": 0,
          },
        ],
      ]
    }
  >
    <View
      accessibilityLabel="Loading indicator"
      accessibilityRole="progressbar"
      accessible={true}
      animate={
        {
          "color": "#3FB5FF",
        }
      }
      collapsable={false}
      rawSize={20}
      style={
        {
          "height": 20,
          "width": 20,
        }
      }
      variant="spinner"
    >
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "height": 20,
              "transform": [
                {
                  "rotate": "82.5deg",
                },
                {
                  "rotate": "0deg",
                },
              ],
              "width": 20,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "height": 10,
                "overflow": "hidden",
                "width": 20,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "height": 20,
                  "transform": [
                    {
                      "translateY": 0,
                    },
                    {
                      "rotate": "-172.5deg",
                    },
                  ],
                  "width": 20,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "height": 10,
                    "overflow": "hidden",
                    "width": 20,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "borderColor": "#3FB5FF",
                      "borderRadius": 10,
                      "borderWidth": 2,
                      "height": 20,
                      "width": 20,
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "height": 20,
              "transform": [
                {
                  "rotate": "82.5deg",
                },
                {
                  "rotate": "0deg",
                },
              ],
              "width": 20,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "height": 10,
                "overflow": "hidden",
                "top": 10,
                "width": 20,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "height": 20,
                  "transform": [
                    {
                      "translateY": -10,
                    },
                    {
                      "rotate": "352.5deg",
                    },
                  ],
                  "width": 20,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "height": 10,
                    "overflow": "hidden",
                    "width": 20,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "borderColor": "#3FB5FF",
                      "borderRadius": 10,
                      "borderWidth": 2,
                      "height": 20,
                      "width": 20,
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
        [
          {
            "alignSelf": "flex-start",
          },
          {
            "color": "#FF4B42",
            "flex": 0,
          },
        ],
      ]
    }
  >
    <View
      accessibilityLabel="Loading indicator"
      accessibilityRole="progressbar"
      accessible={true}
      animate={
        {
          "color": "#FF4B42",
        }
      }
      collapsable={false}
      rawSize={20}
      style={
        {
          "height": 20,
          "width": 20,
        }
      }
      variant="spinner"
    >
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "height": 20,
              "transform": [
                {
                  "rotate": "82.5deg",
                },
                {
                  "rotate": "0deg",
                },
              ],
              "width": 20,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "height": 10,
                "overflow": "hidden",
                "width": 20,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "height": 20,
                  "transform": [
                    {
                      "translateY": 0,
                    },
                    {
                      "rotate": "-172.5deg",
                    },
                  ],
                  "width": 20,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "height": 10,
                    "overflow": "hidden",
                    "width": 20,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "borderColor": "#FF4B42",
                      "borderRadius": 10,
                      "borderWidth": 2,
                      "height": 20,
                      "width": 20,
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "height": 20,
              "transform": [
                {
                  "rotate": "82.5deg",
                },
                {
                  "rotate": "0deg",
                },
              ],
              "width": 20,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "height": 10,
                "overflow": "hidden",
                "top": 10,
                "width": 20,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "height": 20,
                  "transform": [
                    {
                      "translateY": -10,
                    },
                    {
                      "rotate": "352.5deg",
                    },
                  ],
                  "width": 20,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "height": 10,
                    "overflow": "hidden",
                    "width": 20,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "borderColor": "#FF4B42",
                      "borderRadius": 10,
                      "borderWidth": 2,
                      "height": 20,
                      "width": 20,
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Atoms/Spinner passes the snapshot test for different sizes 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
        [
          {
            "alignSelf": "flex-start",
          },
          {
            "color": "#6A7BFF",
            "flex": 0,
          },
        ],
      ]
    }
  >
    <View
      accessibilityLabel="Loading indicator"
      accessibilityRole="progressbar"
      accessible={true}
      animate={
        {
          "color": "#6A7BFF",
        }
      }
      collapsable={false}
      rawSize={10}
      style={
        {
          "height": 10,
          "width": 10,
        }
      }
      variant="spinner"
    >
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "height": 10,
              "transform": [
                {
                  "rotate": "82.5deg",
                },
                {
                  "rotate": "0deg",
                },
              ],
              "width": 10,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "height": 5,
                "overflow": "hidden",
                "width": 10,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "height": 10,
                  "transform": [
                    {
                      "translateY": 0,
                    },
                    {
                      "rotate": "-172.5deg",
                    },
                  ],
                  "width": 10,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "height": 5,
                    "overflow": "hidden",
                    "width": 10,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "borderColor": "#6A7BFF",
                      "borderRadius": 5,
                      "borderWidth": 1,
                      "height": 10,
                      "width": 10,
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "height": 10,
              "transform": [
                {
                  "rotate": "82.5deg",
                },
                {
                  "rotate": "0deg",
                },
              ],
              "width": 10,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "height": 5,
                "overflow": "hidden",
                "top": 5,
                "width": 10,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "height": 10,
                  "transform": [
                    {
                      "translateY": -5,
                    },
                    {
                      "rotate": "352.5deg",
                    },
                  ],
                  "width": 10,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "height": 5,
                    "overflow": "hidden",
                    "width": 10,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "borderColor": "#6A7BFF",
                      "borderRadius": 5,
                      "borderWidth": 1,
                      "height": 10,
                      "width": 10,
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
        [
          {
            "alignSelf": "flex-start",
          },
          {
            "color": "#6A7BFF",
            "flex": 0,
          },
        ],
      ]
    }
  >
    <View
      accessibilityLabel="Loading indicator"
      accessibilityRole="progressbar"
      accessible={true}
      animate={
        {
          "color": "#6A7BFF",
        }
      }
      collapsable={false}
      rawSize={15}
      style={
        {
          "height": 15,
          "width": 15,
        }
      }
      variant="spinner"
    >
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "height": 15,
              "transform": [
                {
                  "rotate": "82.5deg",
                },
                {
                  "rotate": "0deg",
                },
              ],
              "width": 15,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "height": 7.5,
                "overflow": "hidden",
                "width": 15,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "height": 15,
                  "transform": [
                    {
                      "translateY": 0,
                    },
                    {
                      "rotate": "-172.5deg",
                    },
                  ],
                  "width": 15,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "height": 7.5,
                    "overflow": "hidden",
                    "width": 15,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "borderColor": "#6A7BFF",
                      "borderRadius": 7.5,
                      "borderWidth": 1.5,
                      "height": 15,
                      "width": 15,
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "height": 15,
              "transform": [
                {
                  "rotate": "82.5deg",
                },
                {
                  "rotate": "0deg",
                },
              ],
              "width": 15,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "height": 7.5,
                "overflow": "hidden",
                "top": 7.5,
                "width": 15,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "height": 15,
                  "transform": [
                    {
                      "translateY": -7.5,
                    },
                    {
                      "rotate": "352.5deg",
                    },
                  ],
                  "width": 15,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "height": 7.5,
                    "overflow": "hidden",
                    "width": 15,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "borderColor": "#6A7BFF",
                      "borderRadius": 7.5,
                      "borderWidth": 1.5,
                      "height": 15,
                      "width": 15,
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
        [
          {
            "alignSelf": "flex-start",
          },
          {
            "color": "#6A7BFF",
            "flex": 0,
          },
        ],
      ]
    }
  >
    <View
      accessibilityLabel="Loading indicator"
      accessibilityRole="progressbar"
      accessible={true}
      animate={
        {
          "color": "#6A7BFF",
        }
      }
      collapsable={false}
      rawSize={20}
      style={
        {
          "height": 20,
          "width": 20,
        }
      }
      variant="spinner"
    >
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "height": 20,
              "transform": [
                {
                  "rotate": "82.5deg",
                },
                {
                  "rotate": "0deg",
                },
              ],
              "width": 20,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "height": 10,
                "overflow": "hidden",
                "width": 20,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "height": 20,
                  "transform": [
                    {
                      "translateY": 0,
                    },
                    {
                      "rotate": "-172.5deg",
                    },
                  ],
                  "width": 20,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "height": 10,
                    "overflow": "hidden",
                    "width": 20,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "borderColor": "#6A7BFF",
                      "borderRadius": 10,
                      "borderWidth": 2,
                      "height": 20,
                      "width": 20,
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "height": 20,
              "transform": [
                {
                  "rotate": "82.5deg",
                },
                {
                  "rotate": "0deg",
                },
              ],
              "width": 20,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "height": 10,
                "overflow": "hidden",
                "top": 10,
                "width": 20,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "height": 20,
                  "transform": [
                    {
                      "translateY": -10,
                    },
                    {
                      "rotate": "352.5deg",
                    },
                  ],
                  "width": 20,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "height": 10,
                    "overflow": "hidden",
                    "width": 20,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "borderColor": "#6A7BFF",
                      "borderRadius": 10,
                      "borderWidth": 2,
                      "height": 20,
                      "width": 20,
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
        [
          {
            "alignSelf": "flex-start",
          },
          {
            "color": "#6A7BFF",
            "flex": 0,
          },
        ],
      ]
    }
  >
    <View
      accessibilityLabel="Loading indicator"
      accessibilityRole="progressbar"
      accessible={true}
      animate={
        {
          "color": "#6A7BFF",
        }
      }
      collapsable={false}
      rawSize={30}
      style={
        {
          "height": 30,
          "width": 30,
        }
      }
      variant="spinner"
    >
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "height": 30,
              "transform": [
                {
                  "rotate": "82.5deg",
                },
                {
                  "rotate": "0deg",
                },
              ],
              "width": 30,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "height": 15,
                "overflow": "hidden",
                "width": 30,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "height": 30,
                  "transform": [
                    {
                      "translateY": 0,
                    },
                    {
                      "rotate": "-172.5deg",
                    },
                  ],
                  "width": 30,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "height": 15,
                    "overflow": "hidden",
                    "width": 30,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "borderColor": "#6A7BFF",
                      "borderRadius": 15,
                      "borderWidth": 3,
                      "height": 30,
                      "width": 30,
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "height": 30,
              "transform": [
                {
                  "rotate": "82.5deg",
                },
                {
                  "rotate": "0deg",
                },
              ],
              "width": 30,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "height": 15,
                "overflow": "hidden",
                "top": 15,
                "width": 30,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "height": 30,
                  "transform": [
                    {
                      "translateY": -15,
                    },
                    {
                      "rotate": "352.5deg",
                    },
                  ],
                  "width": 30,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "height": 15,
                    "overflow": "hidden",
                    "width": 30,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "borderColor": "#6A7BFF",
                      "borderRadius": 15,
                      "borderWidth": 3,
                      "height": 30,
                      "width": 30,
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Atoms/Spinner passes the snapshot test for different variants 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
        [
          {
            "alignSelf": "flex-start",
          },
          {
            "color": "#6A7BFF",
            "flex": 0,
          },
        ],
      ]
    }
  >
    <View
      accessibilityLabel="Loading indicator"
      accessibilityRole="progressbar"
      accessible={true}
      animate={
        {
          "color": "#6A7BFF",
        }
      }
      collapsable={false}
      rawSize={20}
      style={
        {
          "height": 20,
          "width": 20,
        }
      }
      variant="activity"
    >
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "flex-start",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "rotate": "0deg",
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#6A7BFF",
              "borderRadius": 1,
              "height": 5,
              "opacity": 0,
              "width": 2,
            }
          }
        />
      </View>
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "flex-start",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "rotate": "30deg",
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#6A7BFF",
              "borderRadius": 1,
              "height": 5,
              "opacity": 0.09090909090909083,
              "width": 2,
            }
          }
        />
      </View>
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "flex-start",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "rotate": "60deg",
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#6A7BFF",
              "borderRadius": 1,
              "height": 5,
              "opacity": 0.18181818181818177,
              "width": 2,
            }
          }
        />
      </View>
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "flex-start",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "rotate": "90deg",
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#6A7BFF",
              "borderRadius": 1,
              "height": 5,
              "opacity": 0.2727272727272727,
              "width": 2,
            }
          }
        />
      </View>
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "flex-start",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "rotate": "120deg",
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#6A7BFF",
              "borderRadius": 1,
              "height": 5,
              "opacity": 0.36363636363636365,
              "width": 2,
            }
          }
        />
      </View>
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "flex-start",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "rotate": "150deg",
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#6A7BFF",
              "borderRadius": 1,
              "height": 5,
              "opacity": 0.4545454545454546,
              "width": 2,
            }
          }
        />
      </View>
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "flex-start",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "rotate": "180deg",
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#6A7BFF",
              "borderRadius": 1,
              "height": 5,
              "opacity": 0.5454545454545454,
              "width": 2,
            }
          }
        />
      </View>
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "flex-start",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "rotate": "210deg",
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#6A7BFF",
              "borderRadius": 1,
              "height": 5,
              "opacity": 0.6363636363636364,
              "width": 2,
            }
          }
        />
      </View>
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "flex-start",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "rotate": "240deg",
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#6A7BFF",
              "borderRadius": 1,
              "height": 5,
              "opacity": 0.7272727272727273,
              "width": 2,
            }
          }
        />
      </View>
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "flex-start",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "rotate": "270deg",
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#6A7BFF",
              "borderRadius": 1,
              "height": 5,
              "opacity": 0.8181818181818181,
              "width": 2,
            }
          }
        />
      </View>
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "flex-start",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "rotate": "300deg",
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#6A7BFF",
              "borderRadius": 1,
              "height": 5,
              "opacity": 0.9090909090909091,
              "width": 2,
            }
          }
        />
      </View>
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "flex-start",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "rotate": "330deg",
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#6A7BFF",
              "borderRadius": 1,
              "height": 5,
              "opacity": 1,
              "width": 2,
            }
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "center",
        },
        [
          {
            "alignSelf": "flex-start",
          },
          {
            "color": "#6A7BFF",
            "flex": 0,
          },
        ],
      ]
    }
  >
    <View
      accessibilityLabel="Loading indicator"
      accessibilityRole="progressbar"
      accessible={true}
      animate={
        {
          "color": "#6A7BFF",
        }
      }
      collapsable={false}
      rawSize={20}
      style={
        {
          "height": 20,
          "width": 20,
        }
      }
      variant="ball"
    >
      <View
        collapsable={false}
        style={
          {
            "alignItems": "flex-start",
            "bottom": 0,
            "justifyContent": "flex-start",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "rotate": "0deg",
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#6A7BFF",
              "borderRadius": 2,
              "height": 4,
              "margin": 1,
              "transform": [
                {
                  "scale": 0.7,
                },
              ],
              "width": 4,
            }
          }
        />
      </View>
      <View
        collapsable={false}
        style={
          {
            "alignItems": "flex-start",
            "bottom": 0,
            "justifyContent": "flex-start",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "rotate": "45deg",
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#6A7BFF",
              "borderRadius": 2,
              "height": 4,
              "margin": 1,
              "transform": [
                {
                  "scale": 0.7714285714285714,
                },
              ],
              "width": 4,
            }
          }
        />
      </View>
      <View
        collapsable={false}
        style={
          {
            "alignItems": "flex-start",
            "bottom": 0,
            "justifyContent": "flex-start",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "rotate": "90deg",
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#6A7BFF",
              "borderRadius": 2,
              "height": 4,
              "margin": 1,
              "transform": [
                {
                  "scale": 0.8428571428571427,
                },
              ],
              "width": 4,
            }
          }
        />
      </View>
      <View
        collapsable={false}
        style={
          {
            "alignItems": "flex-start",
            "bottom": 0,
            "justifyContent": "flex-start",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "rotate": "135deg",
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#6A7BFF",
              "borderRadius": 2,
              "height": 4,
              "margin": 1,
              "transform": [
                {
                  "scale": 0.9142857142857143,
                },
              ],
              "width": 4,
            }
          }
        />
      </View>
      <View
        collapsable={false}
        style={
          {
            "alignItems": "flex-start",
            "bottom": 0,
            "justifyContent": "flex-start",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "rotate": "180deg",
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#6A7BFF",
              "borderRadius": 2,
              "height": 4,
              "margin": 1,
              "transform": [
                {
                  "scale": 0.9857142857142857,
                },
              ],
              "width": 4,
            }
          }
        />
      </View>
      <View
        collapsable={false}
        style={
          {
            "alignItems": "flex-start",
            "bottom": 0,
            "justifyContent": "flex-start",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "rotate": "225deg",
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#6A7BFF",
              "borderRadius": 2,
              "height": 4,
              "margin": 1,
              "transform": [
                {
                  "scale": 1.0571428571428572,
                },
              ],
              "width": 4,
            }
          }
        />
      </View>
      <View
        collapsable={false}
        style={
          {
            "alignItems": "flex-start",
            "bottom": 0,
            "justifyContent": "flex-start",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "rotate": "270deg",
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#6A7BFF",
              "borderRadius": 2,
              "height": 4,
              "margin": 1,
              "transform": [
                {
                  "scale": 1.1285714285714286,
                },
              ],
              "width": 4,
            }
          }
        />
      </View>
      <View
        collapsable={false}
        style={
          {
            "alignItems": "flex-start",
            "bottom": 0,
            "justifyContent": "flex-start",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "rotate": "315deg",
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#6A7BFF",
              "borderRadius": 2,
              "height": 4,
              "margin": 1,
              "transform": [
                {
                  "scale": 1.2,
                },
              ],
              "width": 4,
            }
          }
        />
      </View>
    </View>
  </View>
  <View
    accessibilityLabel="Loading indicator"
    accessibilityRole="progressbar"
    accessible={true}
    animate={
      {
        "color": "#6A7BFF",
      }
    }
    collapsable={false}
    rawSize={20}
    style={
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "color": "#6A7BFF",
        "flex": 0,
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
    variant="bar"
  >
    <View
      animate={
        {
          "height": 20,
          "marginHorizontal": 2,
          "width": 4,
        }
      }
      animatedStyle={
        {
          "value": {
            "height": 20,
            "marginHorizontal": 2,
            "width": 4,
          },
        }
      }
      collapsable={false}
      style={
        {
          "height": 20,
          "marginHorizontal": 2,
          "width": 4,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#6A7BFF",
            "borderTopLeftRadius": 2,
            "borderTopRightRadius": 2,
            "height": 10,
            "transform": [
              {
                "translateY": 4,
              },
            ],
            "width": 4,
          }
        }
      />
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#6A7BFF",
            "borderBottomLeftRadius": 2,
            "borderBottomRightRadius": 2,
            "height": 10,
            "transform": [
              {
                "translateY": -4,
              },
            ],
            "width": 4,
          }
        }
      />
    </View>
    <View
      animate={
        {
          "height": 20,
          "marginHorizontal": 2,
          "width": 4,
        }
      }
      animatedStyle={
        {
          "value": {
            "height": 20,
            "marginHorizontal": 2,
            "width": 4,
          },
        }
      }
      collapsable={false}
      style={
        {
          "height": 20,
          "marginHorizontal": 2,
          "width": 4,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#6A7BFF",
            "borderTopLeftRadius": 2,
            "borderTopRightRadius": 2,
            "height": 10,
            "transform": [
              {
                "translateY": 1.948691375843187,
              },
            ],
            "width": 4,
          }
        }
      />
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#6A7BFF",
            "borderBottomLeftRadius": 2,
            "borderBottomRightRadius": 2,
            "height": 10,
            "transform": [
              {
                "translateY": -1.948691375843187,
              },
            ],
            "width": 4,
          }
        }
      />
    </View>
    <View
      animate={
        {
          "height": 20,
          "marginHorizontal": 2,
          "width": 4,
        }
      }
      animatedStyle={
        {
          "value": {
            "height": 20,
            "marginHorizontal": 2,
            "width": 4,
          },
        }
      }
      collapsable={false}
      style={
        {
          "height": 20,
          "marginHorizontal": 2,
          "width": 4,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#6A7BFF",
            "borderTopLeftRadius": 2,
            "borderTopRightRadius": 2,
            "height": 10,
            "transform": [
              {
                "translateY": 2.1013009608571953,
              },
            ],
            "width": 4,
          }
        }
      />
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#6A7BFF",
            "borderBottomLeftRadius": 2,
            "borderBottomRightRadius": 2,
            "height": 10,
            "transform": [
              {
                "translateY": -2.1013009608571953,
              },
            ],
            "width": 4,
          }
        }
      />
    </View>
  </View>
  <View
    accessibilityLabel="Loading indicator"
    accessibilityRole="progressbar"
    accessible={true}
    animate={
      {
        "color": "#6A7BFF",
      }
    }
    collapsable={false}
    rawSize={20}
    sizeMultiplier={0.2}
    style={
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "color": "#6A7BFF",
        "flex": 0,
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
    variant="dot"
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "#6A7BFF",
          "borderRadius": 2,
          "height": 4,
          "margin": 2,
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 4,
        }
      }
    />
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "#6A7BFF",
          "borderRadius": 2,
          "height": 4,
          "margin": 2,
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 4,
        }
      }
    />
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "#6A7BFF",
          "borderRadius": 2,
          "height": 4,
          "margin": 2,
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 4,
        }
      }
    />
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "#6A7BFF",
          "borderRadius": 2,
          "height": 4,
          "margin": 2,
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 4,
        }
      }
    />
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
        [
          {
            "alignSelf": "flex-start",
          },
          {
            "color": "#6A7BFF",
            "flex": 0,
          },
        ],
      ]
    }
  >
    <View
      accessibilityLabel="Loading indicator"
      accessibilityRole="progressbar"
      accessible={true}
      animate={
        {
          "color": "#6A7BFF",
        }
      }
      collapsable={false}
      rawSize={20}
      style={
        {
          "height": 20,
          "width": 25,
        }
      }
      variant="pacman"
    >
      <View
        collapsable={false}
        style={
          {
            "height": 10,
            "left": 0,
            "position": "absolute",
            "top": 5,
            "transform": [
              {
                "rotate": "0deg",
              },
            ],
            "width": 10,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#6A7BFF",
              "borderTopLeftRadius": 5,
              "borderTopRightRadius": 5,
              "height": 5,
              "overflow": "hidden",
              "width": 10,
            }
          }
        />
      </View>
      <View
        collapsable={false}
        style={
          {
            "height": 10,
            "left": 0,
            "position": "absolute",
            "top": 5,
            "transform": [
              {
                "rotate": "0deg",
              },
            ],
            "width": 10,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#6A7BFF",
              "borderBottomLeftRadius": 5,
              "borderBottomRightRadius": 5,
              "height": 5,
              "overflow": "hidden",
              "top": 5,
              "width": 10,
            }
          }
        />
      </View>
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#6A7BFF",
            "borderRadius": 1.25,
            "height": 2.5,
            "left": 11.25,
            "position": "absolute",
            "top": 8.75,
            "transform": [
              {
                "translateX": 0,
              },
            ],
            "width": 2.5,
          }
        }
      />
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#6A7BFF",
            "borderRadius": 1.25,
            "height": 2.5,
            "left": 16.25,
            "position": "absolute",
            "top": 8.75,
            "transform": [
              {
                "translateX": 0,
              },
            ],
            "width": 2.5,
          }
        }
      />
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#6A7BFF",
            "borderRadius": 1.25,
            "height": 2.5,
            "left": 21.25,
            "opacity": 0,
            "position": "absolute",
            "top": 8.75,
            "transform": [
              {
                "translateX": 0,
              },
              {
                "scale": 0,
              },
            ],
            "width": 2.5,
          }
        }
      />
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
        [
          {
            "alignSelf": "flex-start",
          },
          {
            "color": "#6A7BFF",
            "flex": 0,
          },
        ],
      ]
    }
  >
    <View
      accessibilityLabel="Loading indicator"
      accessibilityRole="progressbar"
      accessible={true}
      animate={
        {
          "color": "#6A7BFF",
        }
      }
      collapsable={false}
      rawSize={20}
      style={
        {
          "height": 20,
          "width": 20,
        }
      }
      variant="pulse"
    >
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#6A7BFF",
              "borderRadius": 10,
              "height": 20,
              "opacity": 0.5,
              "transform": [
                {
                  "scale": 0.4,
                },
              ],
              "width": 20,
            }
          }
        />
      </View>
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#6A7BFF",
              "borderRadius": 10,
              "height": 20,
              "opacity": 1,
              "transform": [
                {
                  "scale": 0.4,
                },
              ],
              "width": 20,
            }
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
        [
          {
            "alignSelf": "flex-start",
          },
          {
            "color": "#6A7BFF",
            "flex": 0,
          },
        ],
      ]
    }
  >
    <View
      accessibilityLabel="Loading indicator"
      accessibilityRole="progressbar"
      accessible={true}
      animate={
        {
          "color": "#6A7BFF",
        }
      }
      collapsable={false}
      rawSize={20}
      style={
        {
          "height": 20,
          "width": 20,
        }
      }
      variant="skype"
    >
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "flex-start",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "rotate": "0deg",
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#6A7BFF",
              "borderRadius": 2,
              "height": 4,
              "transform": [
                {
                  "scale": 1,
                },
              ],
              "width": 4,
            }
          }
        />
      </View>
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "flex-start",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "rotate": "0deg",
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#6A7BFF",
              "borderRadius": 2,
              "height": 4,
              "transform": [
                {
                  "scale": 0.8,
                },
              ],
              "width": 4,
            }
          }
        />
      </View>
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "flex-start",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "rotate": "0deg",
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#6A7BFF",
              "borderRadius": 2,
              "height": 4,
              "transform": [
                {
                  "scale": 0.6,
                },
              ],
              "width": 4,
            }
          }
        />
      </View>
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "flex-start",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "rotate": "0deg",
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#6A7BFF",
              "borderRadius": 2,
              "height": 4,
              "transform": [
                {
                  "scale": 0.3999999999999999,
                },
              ],
              "width": 4,
            }
          }
        />
      </View>
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "flex-start",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "rotate": "0deg",
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#6A7BFF",
              "borderRadius": 2,
              "height": 4,
              "transform": [
                {
                  "scale": 0.19999999999999996,
                },
              ],
              "width": 4,
            }
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
        [
          {
            "alignSelf": "flex-start",
          },
          {
            "color": "#6A7BFF",
            "flex": 0,
          },
        ],
      ]
    }
  >
    <View
      accessibilityLabel="Loading indicator"
      accessibilityRole="progressbar"
      accessible={true}
      animate={
        {
          "color": "#6A7BFF",
        }
      }
      collapsable={false}
      rawSize={20}
      style={
        {
          "height": 20,
          "width": 20,
        }
      }
      variant="spinner"
    >
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "height": 20,
              "transform": [
                {
                  "rotate": "82.5deg",
                },
                {
                  "rotate": "0deg",
                },
              ],
              "width": 20,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "height": 10,
                "overflow": "hidden",
                "width": 20,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "height": 20,
                  "transform": [
                    {
                      "translateY": 0,
                    },
                    {
                      "rotate": "-172.5deg",
                    },
                  ],
                  "width": 20,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "height": 10,
                    "overflow": "hidden",
                    "width": 20,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "borderColor": "#6A7BFF",
                      "borderRadius": 10,
                      "borderWidth": 2,
                      "height": 20,
                      "width": 20,
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "height": 20,
              "transform": [
                {
                  "rotate": "82.5deg",
                },
                {
                  "rotate": "0deg",
                },
              ],
              "width": 20,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "height": 10,
                "overflow": "hidden",
                "top": 10,
                "width": 20,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "height": 20,
                  "transform": [
                    {
                      "translateY": -10,
                    },
                    {
                      "rotate": "352.5deg",
                    },
                  ],
                  "width": 20,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "height": 10,
                    "overflow": "hidden",
                    "width": 20,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "borderColor": "#6A7BFF",
                      "borderRadius": 10,
                      "borderWidth": 2,
                      "height": 20,
                      "width": 20,
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
        [
          {
            "alignSelf": "flex-start",
          },
          {
            "color": "#6A7BFF",
            "flex": 0,
          },
        ],
      ]
    }
  >
    <View
      accessibilityLabel="Loading indicator"
      accessibilityRole="progressbar"
      accessible={true}
      animate={
        {
          "color": "#6A7BFF",
        }
      }
      collapsable={false}
      rawSize={20}
      style={
        {
          "height": 20,
          "width": 20,
        }
      }
      variant="wave"
    >
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#6A7BFF",
              "borderRadius": 10,
              "borderWidth": 0,
              "height": 20,
              "opacity": 0,
              "transform": [
                {
                  "scale": 0,
                },
              ],
              "width": 20,
            }
          }
        />
      </View>
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#6A7BFF",
              "borderRadius": 10,
              "borderWidth": 0,
              "height": 20,
              "opacity": 0,
              "transform": [
                {
                  "scale": 0,
                },
              ],
              "width": 20,
            }
          }
        />
      </View>
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#6A7BFF",
              "borderRadius": 10,
              "borderWidth": 0,
              "height": 20,
              "opacity": 0,
              "transform": [
                {
                  "scale": 0,
                },
              ],
              "width": 20,
            }
          }
        />
      </View>
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#6A7BFF",
              "borderRadius": 10,
              "borderWidth": 0,
              "height": 20,
              "opacity": 0,
              "transform": [
                {
                  "scale": 0,
                },
              ],
              "width": 20,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Atoms/Spinner passes the snapshot test if the spinner is expanded or not 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    animate={{}}
    animatedStyle={
      {
        "value": {},
      }
    }
    collapsable={false}
    style={
      {
        "flexDirection": "column",
        "flexWrap": "nowrap",
      }
    }
  >
    <View
      animate={
        {
          "backgroundColor": "#EDF1F7",
          "height": 100,
          "marginBottom": "l",
          "width": 200,
        }
      }
      animatedStyle={
        {
          "value": {
            "backgroundColor": "#EDF1F7",
            "height": 100,
            "marginBottom": "l",
            "width": 200,
          },
        }
      }
      collapsable={false}
      style={
        {
          "backgroundColor": "#EDF1F7",
          "height": 100,
          "marginBottom": "l",
          "width": 200,
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
            },
            [
              {
                "alignSelf": "flex-start",
              },
              {
                "color": "#6A7BFF",
                "flex": 0,
              },
            ],
          ]
        }
      >
        <View
          accessibilityLabel="Loading indicator"
          accessibilityRole="progressbar"
          accessible={true}
          animate={
            {
              "color": "#6A7BFF",
            }
          }
          collapsable={false}
          rawSize={20}
          style={
            {
              "height": 20,
              "width": 20,
            }
          }
          variant="spinner"
        >
          <View
            collapsable={false}
            style={
              {
                "alignItems": "center",
                "bottom": 0,
                "justifyContent": "center",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "height": 20,
                  "transform": [
                    {
                      "rotate": "82.5deg",
                    },
                    {
                      "rotate": "0deg",
                    },
                  ],
                  "width": 20,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "height": 10,
                    "overflow": "hidden",
                    "width": 20,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "height": 20,
                      "transform": [
                        {
                          "translateY": 0,
                        },
                        {
                          "rotate": "-172.5deg",
                        },
                      ],
                      "width": 20,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      {
                        "height": 10,
                        "overflow": "hidden",
                        "width": 20,
                      }
                    }
                  >
                    <View
                      collapsable={false}
                      style={
                        {
                          "borderColor": "#6A7BFF",
                          "borderRadius": 10,
                          "borderWidth": 2,
                          "height": 20,
                          "width": 20,
                        }
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            collapsable={false}
            style={
              {
                "alignItems": "center",
                "bottom": 0,
                "justifyContent": "center",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "height": 20,
                  "transform": [
                    {
                      "rotate": "82.5deg",
                    },
                    {
                      "rotate": "0deg",
                    },
                  ],
                  "width": 20,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "height": 10,
                    "overflow": "hidden",
                    "top": 10,
                    "width": 20,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "height": 20,
                      "transform": [
                        {
                          "translateY": -10,
                        },
                        {
                          "rotate": "352.5deg",
                        },
                      ],
                      "width": 20,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      {
                        "height": 10,
                        "overflow": "hidden",
                        "width": 20,
                      }
                    }
                  >
                    <View
                      collapsable={false}
                      style={
                        {
                          "borderColor": "#6A7BFF",
                          "borderRadius": 10,
                          "borderWidth": 2,
                          "height": 20,
                          "width": 20,
                        }
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      animate={
        {
          "backgroundColor": "#EDF1F7",
          "height": 100,
          "width": 200,
        }
      }
      animatedStyle={
        {
          "value": {
            "backgroundColor": "#EDF1F7",
            "height": 100,
            "width": 200,
          },
        }
      }
      collapsable={false}
      style={
        {
          "backgroundColor": "#EDF1F7",
          "height": 100,
          "width": 200,
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
            },
            [
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              {
                "color": "#6A7BFF",
                "flex": 0,
              },
            ],
          ]
        }
      >
        <View
          accessibilityLabel="Loading indicator"
          accessibilityRole="progressbar"
          accessible={true}
          animate={
            {
              "color": "#6A7BFF",
            }
          }
          collapsable={false}
          rawSize={20}
          style={
            {
              "height": 20,
              "width": 20,
            }
          }
          variant="spinner"
        >
          <View
            collapsable={false}
            style={
              {
                "alignItems": "center",
                "bottom": 0,
                "justifyContent": "center",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "height": 20,
                  "transform": [
                    {
                      "rotate": "82.5deg",
                    },
                    {
                      "rotate": "0deg",
                    },
                  ],
                  "width": 20,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "height": 10,
                    "overflow": "hidden",
                    "width": 20,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "height": 20,
                      "transform": [
                        {
                          "translateY": 0,
                        },
                        {
                          "rotate": "-172.5deg",
                        },
                      ],
                      "width": 20,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      {
                        "height": 10,
                        "overflow": "hidden",
                        "width": 20,
                      }
                    }
                  >
                    <View
                      collapsable={false}
                      style={
                        {
                          "borderColor": "#6A7BFF",
                          "borderRadius": 10,
                          "borderWidth": 2,
                          "height": 20,
                          "width": 20,
                        }
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            collapsable={false}
            style={
              {
                "alignItems": "center",
                "bottom": 0,
                "justifyContent": "center",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "height": 20,
                  "transform": [
                    {
                      "rotate": "82.5deg",
                    },
                    {
                      "rotate": "0deg",
                    },
                  ],
                  "width": 20,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "height": 10,
                    "overflow": "hidden",
                    "top": 10,
                    "width": 20,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "height": 20,
                      "transform": [
                        {
                          "translateY": -10,
                        },
                        {
                          "rotate": "352.5deg",
                        },
                      ],
                      "width": 20,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      {
                        "height": 10,
                        "overflow": "hidden",
                        "width": 20,
                      }
                    }
                  >
                    <View
                      collapsable={false}
                      style={
                        {
                          "borderColor": "#6A7BFF",
                          "borderRadius": 10,
                          "borderWidth": 2,
                          "height": 20,
                          "width": 20,
                        }
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
